--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/seafile-api.js",
   "dependencies": {
     "axios": "^0.21.0",
+    "cross-blob": "^2.0.0",
     "form-data": "^3.0.0",
     "package.json": "^2.0.1"
   },
